name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , clay
                  , containers
                  , datetime
                  , filepath
                  , pandoc
                  , hakyll == 4.7.*
                  , hakyll-contrib-hyphenation
                  , xml
  ghc-options:      -threaded
  default-language: Haskell2010
