name: blog
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: UnspecifiedLicense

executable blog
    main-is: Main.hs
    build-depends:
        base ==4.*,
        clay ==0.11.*,
        containers >=0.5.7.1 && <0.6,
        datetime >=0.3.1 && <0.4,
        filepath >=1.4.1.0 && <1.5,
        hashable >=1.2.4.0 && <1.3,
        unordered-containers >=0.2.7.1 && <0.3,
        hyphenation ==0.6.*,
        pandoc >=1.17.1 && <1.18,
        split >=0.2.3.1 && <0.3,
        tagsoup ==0.14.*,
        hakyll >=4.8.3.2 && <4.9
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -threaded

