name: blog
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: UnspecifiedLicense

executable blog
    main-is: Main.hs
    build-depends:
        base -any,
        clay >=0.12.1 && <0.13,
        containers >=0.5.7.1 && <0.6,
        datetime >=0.3.1 && <0.4,
        filepath >=1.4.1.1 && <1.5,
        hashable >=1.2.5.0 && <1.3,
        unordered-containers >=0.2.7.2 && <0.3,
        hyphenation ==0.6.*,
        pandoc >=1.19.2.1 && <1.20,
        pandoc-types >=1.17.0.5 && <1.18,
        mtl >=2.2.1 && <2.3,
        split >=0.2.3.1 && <0.3,
        tagsoup >=0.14.1 && <0.15,
        hakyll >=4.9.5.1 && <4.10
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -O -rtsopts -threaded -feager-blackholing

